--- a/Flow & PB List View and Batch Delete App Deploy/manifest/package.xml
+++ b/Flow & PB List View and Batch Delete App Deploy/manifest/package.xml
@@ -1,36 +1,57 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>*</members>
+        <members>DeployDeleteInactiveFlows</members>
+        <members>DeployDeleteInactiveFlowsTest</members>
+        <members>FlowDatatableDescriptor</members>
+        <members>GetFlowInfoAdvanced</members>
+        <members>GetFlowInfoAdvancedTest</members>
+        <members>HexUtil</members>
+        <members>MetadataService</members>
+        <members>MetadataServiceTest</members>
+        <members>Puff</members>
+        <members>SObjectController2</members>
+        <members>SObjectController2Test</members>
+        <members>TranslateFlowRecords</members>
+        <members>TranslateFlowRecordsTest</members>
+        <members>Zippex</members>
+        <members>ZippexTests</members>
         <name>ApexClass</name>
     </types>
     <types>
-        <members>*</members>
+        <members>navigateEverywhereLFA</members>
         <name>ApexComponent</name>
     </types>
     <types>
-        <members>*</members>
-        <name>ApexPage</name>
+        <members>X430347</members>
+        <name>ContentAsset</name>
     </types>
     <types>
-        <members>*</members>
-        <name>ApexTestSuite</name>
+        <members>Flow_PB_List_View_and_Batch_Delete</members>
+        <name>CustomTab</name>
     </types>
     <types>
-        <members>*</members>
-        <name>ApexTrigger</name>
+        <members>Flow_PB_List_View_and_Batch_Delete</members>
+        <name>FlexiPage</name>
     </types>
     <types>
-        <members>*</members>
-        <name>AuraDefinitionBundle</name>
+        <members>Flow_and_Process_Builder_App_Image</members>
+        <members>Flow_and_Process_Builder_Display_Datatable_and_DELETE</members>
+        <members>Flow_and_Process_Builder_List_View</members>
+        <members>Flow_and_Process_Builder_List_View_Run_Flow</members>
+        <members>Flow_and_Process_Builder_List_View_with_DELETE</members>
+        <members>Flow_and_Process_Builder_OneView_Promo</members>
+        <members>Flow_and_Process_Builder_Select_with_DELETE</members>
+        <name>Flow</name>
     </types>
     <types>
-        <members>*</members>
+        <members>datatableV2</members>
         <name>LightningComponentBundle</name>
     </types>
     <types>
-        <members>*</members>
+        <members>BulkDeleteImage</members>
+        <members>DeleteTrash</members>
         <name>StaticResource</name>
     </types>
-    <version>48.0</version>
+    <version>49.0</version>
 </Package>
