--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
 Flow & PB List View and Batch Delete App Deploy/.sfdx/tools/apex.db
+Flow & PB List View and Batch Delete App Deploy/.sfdx/tools/apex.db
